# Mechatronics-2024

./: .gitignore  README.md  README.txt  server.py  yoloscript.sh
PyQT/: main.py  main_window.py  theme.py  theme.ui  (+1 more)
src/classes/: CMakeLists.txt
src/classes/can_interface/include/: can_interface.hpp
src/classes/component/: package.xml
src/classes/component/include/: component.hpp
src/classes/component/src/: component.cpp  main.cpp
src/classes/filter/include/: filter.hpp
src/classes/filters/include/: finite_impulse_filter.hpp
src/classes/operations/include/: vector_operations.hpp
src/classes/robot_interface/include/: robot_interface.hpp
src/classes/scion_types/: CMakeLists.txt
src/classes/scion_types/msg/: Orientation.msg  Position.msg  pidData.msg
src/classes/src/ahrs_driver_lg/: ahrs  ahrs.cpp
src/classes/src/can_interface/include/: can_interface.hpp
src/classes/src/can_interface/src/: can_interface.cpp
src/classes/src/component/: CMakeLists.txt
src/classes/src/dependency_library/: CMakeLists.txt  package.xml
src/classes/src/filters/src/: finite_impulse_filter.cpp
src/classes/src/interfaces/include/: task.hpp
src/classes/src/mission_planning/: CMakeLists.txt  package.xml
src/classes/src/mission_planning/include/: mission.hpp  mission_planning.hpp  task.hpp  task_state.hpp
src/classes/src/mission_planning/src/: main.cpp  mission.cpp  mission_planning.cpp  task.cpp  task_state.cpp
src/classes/src/operations/include/: math_operations.hpp  ros_operations.hpp  vector_operations.hpp
src/classes/src/operations/src/: math_operations.cpp  ros_operations.cpp
src/classes/src/pid_controller/include/: pid_controller.hpp  pid_params.hpp  scion_pid_controller.hpp
src/classes/src/pid_controller/src/: pid_controller.cpp  scion_pid_controller.cpp
src/classes/src/robot_interface/include/: robot_interface.hpp
src/classes/src/scion_types/: CMakeLists.txt
src/classes/src/scion_types/msg/: JsonString.msg  SetValue.msg  State.msg
src/classes/src/scion_types/srv/: ChangeDesiredState.srv  GetDesiredState.srv
src/ros2_ws/src/brain_node/: CMakeLists.txt  package.xml
src/ros2_ws/src/brain_node/include/: brain_node.hpp
src/ros2_ws/src/brain_node/src/: brain_node.cpp  main.cpp
src/ros2_ws/src/control_interface/: CMakeLists.txt
src/ros2_ws/src/control_interface/include/: control_interface.hpp
src/ros2_ws/src/control_interface/src/: control_interface.cpp
src/ros2_ws/src/controller_node/: CMakeLists.txt
src/ros2_ws/src/controller_node/include/: controller_node.hpp
src/ros2_ws/src/controller_node/src/: controller_node.cpp  main.cpp
src/ros2_ws/src/gui_listener_node/: CMakeLists.txt
src/ros2_ws/src/gui_listener_node/include/: gui_listener_node.hpp
src/ros2_ws/src/gui_listener_node/src/: gui_listener_node.cpp
src/ros2_ws/src/gui_node/: CMakeLists.txt  json_string.cpp  json_string.hpp  launch_nodes.cpp  launch_nodes.hpp  launch_nodes.ui
src/ros2_ws/src/gui_node/include/: launch_edit.hpp  launch_window.hpp  mainwindow.hpp  vision.hpp
src/ros2_ws/src/gui_node/src/: launch_edit.cpp  launch_window.cpp  launch_window.ui  main.cpp  mainwindow.cpp  mainwindow.ui  pid_controller.cpp  pid_controller.ui  ui_launch_window.h  vision.cpp
src/ros2_ws/src/gui_node/ui/: launch_edit.ui  mainwindow.ui  vision.ui
src/ros2_ws/src/listener_node/: CMakeLists.txt  package.xml
src/ros2_ws/src/listener_node/include/: listener_node.hpp
src/ros2_ws/src/listener_node/src/: listener_node.cpp  main.cpp
src/ros2_ws/src/pid_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ros2_ws/src/pid_node/include/: pid_node.hpp
src/ros2_ws/src/pid_node/pid_node/: PID_Controller.py  PID_Node.py  PidController.py
src/ros2_ws/src/pid_node/src/: main.cpp  pid_node.cpp
src/ros2_ws/src/relative_state_node/: CMakeLists.txt  package.xml
src/ros2_ws/src/relative_state_node/include/: relative_state_node.hpp
src/ros2_ws/src/relative_state_node/src/: main.cpp  relative_state_node.cpp
src/ros2_ws/src/robot/: CMakeLists.txt  config.json  package.xml
src/ros2_ws/src/robot/include/: abstract_robot.hpp  async_nodes.hpp  component.hpp  components.hpp  configuration.hpp  junebug.hpp  percy.hpp  robot.hpp  robot_factory.hpp
src/ros2_ws/src/robot/src/: async_nodes.cpp  component.cpp  components.cpp  configuration.cpp  junebug.cpp  main.cpp  percy.cpp  robot.cpp  robot_factory.cpp
src/ros2_ws/src/robot_library/: CMakeLists.txt  package.xml
src/ros2_ws/src/translator_node/: CMakeLists.txt  package.xml
src/ros2_ws/src/translator_node/include/: translator_node.hpp
src/ros2_ws/src/translator_node/src/: main.cpp  translator_node.cpp
src/ros2_ws/src/unified_can_driver/: CMakeLists.txt
src/ros2_ws/src/unified_can_driver/include/: unified_can_driver.hpp
src/ros2_ws/src/unified_can_driver/src/: module_loader.cpp
src/scripts/src/can_listener/: CMakeLists.txt
src/scripts/src/can_listener/src/: listener  simple_can_listener.cpp
test/classes/: CMakeLists.txt
test/classes/src/test_can_interface/: CMakeLists.txt  package.xml
test/classes/src/test_can_interface/src/: main.cpp  test_can_interface.cpp
test/classes/src/test_component/: CMakeLists.txt  package.xml
test/classes/src/test_component/src/: component.cpp  test_component.cpp
test/classes/src/test_dependency_library/: CMakeLists.txt  package.xml
test/classes/src/test_dependency_library/src/: test_dependency_library.cpp
test/classes/src/test_filters/: CMakeLists.txt  package.xml
test/classes/src/test_filters/src/: test_filters.cpp
test/classes/src/test_mission_planning/: CMakeLists.txt  package.xml
test/classes/src/test_mission_planning/src/: test_mission_planning.cpp
test/classes/src/test_operations/: CMakeLists.txt  package.xml
test/classes/src/test_operations/src/: test_operations.cpp  test_ros_operations.cpp
test/classes/src/test_pid_controller/: CMakeLists.txt  package.xml
test/classes/src/test_pid_controller/src/: test_pid_controller.cpp
test/ros2_ws/src/test_gui_listener/: CMakeLists.txt  package.xml
test/ros2_ws/src/test_gui_listener/src/: test_gui_listener.cpp
(+290 files in other folders)
